# robo-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements-app.txt
docs/: IMPLEMENTATION_PLAN.md  README.md  ROBOT_AGENT_DESIGN.md  SLIMMING_NOTES.md  STRUCTURE.md
libs/checkpoint/: README.md
libs/checkpoint-sqlite/: README.md  pyproject.toml
libs/langgraph/: Makefile  README.md  pyproject.toml
libs/prebuilt/: Makefile  README.md  pyproject.toml
robot_agent/: __init__.py  context.py  env.py  graph.py  hooks.py  identity.py  llm.py  memory.py  reliability.py  safety.py  state.py  tools.py
robot_agent/driver/: __init__.py  events.py  loop.py  policy.py
robot_agent/frontends/: __init__.py  channel.py  service.py
robot_agent/goals/: __init__.py  arbitrate.py  models.py  planning.py  policy.py  store.py
robot_agent/governance/: __init__.py  compaction.py  policy.py
robot_agent/hal/: __init__.py  interfaces.py  mock.py  registry.py
robot_agent/metacog/: __init__.py  detect.py  (+1 more)
scripts/: probe_live_llm.py  probe_live_vlm.py
tests/: README.md  conftest.py  test_agent_loop.py  test_context.py  test_frontends_web.py  test_live_vlm_probe.py  test_memory.py  test_prompts.py  test_review_fixes.py  test_robot_agent_p0.py  test_robot_agent_p1.py  test_robot_agent_p10.py  test_robot_agent_p2.py  test_robot_agent_p3.py  test_robot_agent_p4.py  test_robot_agent_p5.py  test_robot_agent_p6.py  test_robot_agent_p7.py  test_robot_agent_p8.py  test_robot_agent_p9.py  test_slimming_invariants.py  test_vision.py
(+44 files in other folders)
